<resources>
    <string name="app_name">UtilityApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="choisissez_une_application">Choisissez une application</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="web">WEB</string>
    <string name="map">MAP</string>
    <string name="title_activity_help">help</string>
    <string name="edit_message">Saisir un message</string>
    <string name="btn_send">Envoyer</string>
</resources>
