<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDDC39"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="324dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:background="#009688"
        android:text="@string/choisissez_une_application"
        android:textAlignment="center"
        android:textColor="#FDFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="182dp"
        android:layout_height="78dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="506dp"
        android:text="@string/call"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnSms"
        android:layout_width="189dp"
        android:layout_height="79dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="405dp"
        android:text="@string/sms"
        android:textAlignment="center"
        android:textColor="#FCFDFD"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCall"
        app:layout_constraintVertical_bias="0.482" />

    <Button
        android:id="@+id/btnWeb"
        android:layout_width="191dp"
        android:layout_height="76dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="287dp"
        android:text="@string/web"
        android:textAlignment="center"
        android:textColor="#FEFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSms"
        app:layout_constraintVertical_bias="0.777" />

    <Button
        android:id="@+id/btnMap"
        android:layout_width="189dp"
        android:layout_height="75dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="181dp"
        android:text="@string/map"
        android:textAlignment="center"
        android:textColor="#FAFBFC"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWeb"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="141dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="108dp"
        android:hint="@string/btn_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/btnMap"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="150dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="108dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMap"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>